--- a/src/main/resources/templates/user_no_register/home.html
+++ b/src/main/resources/templates/user_no_register/home.html
@@ -97,7 +97,7 @@
 
       <!--Funcionalidad estadisticas-->
       <li class="nav-item">
-        <a class="nav-link" href="blanco.html">
+        <a class="nav-link" th:href="@{/estadisticas}">
           <i class="fas fa-chart-bar"></i>
           <span>Estadísticas</span></a>
       </li>
