--- a/src/main/resources/templates/user_no_register/home.html
+++ b/src/main/resources/templates/user_no_register/home.html
@@ -240,6 +240,7 @@
       <div class="container-fluid">
         <div class="text-center">
           <h2>Bienvenido a Naucratis</h2>
+          <!--
           <nav>
             <ul>
               <li th:if="${#strings.equals(role,'administrator')}">
@@ -249,8 +250,8 @@
                 <a th:href="@{/customer/shoppingCart}"><button type="button">Carrito</button> </a>
               </li>
             </ul>
-          </nav>
-          <br>
+          </nav>-->
+
           <a th:href="@{/libraries}"> Librerias </a>
         </div>
       </div>
