--- a/src/main/resources/templates/customer/profile.html
+++ b/src/main/resources/templates/customer/profile.html
@@ -27,7 +27,7 @@
             <div th:replace="/user_no_register/home :: contentbar"/>
 
 
-            <!-- Botones de arriba -->
+            <!-- Botones de arriba
             <nav>
                 <ul>
                     <li th:if="${role == null}">
@@ -49,7 +49,7 @@
                         </form>
                     </li>
                 </ul>
-            </nav>
+            </nav> -->
 
             <!-- Perfil -->
             <h1> Perfil cliente <span th:text="${customer.name}">NOMBRE</span></h1>
