--- a/src/main/resources/templates/administrator/profile.html
+++ b/src/main/resources/templates/administrator/profile.html
@@ -59,10 +59,6 @@
                 </div>
             </div>
             <h2> <a th:href="@{/administrator/libraries}"> Librerias </a> </h2>
-            <!-- Footer-->
-            <footer class="py-5 bg-dark">
-                <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
-            </footer>
             <!-- Bootstrap core JS-->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
             <!-- Core theme JS-->
@@ -74,22 +70,20 @@
 <div th:replace="/user_no_register/home :: utils"/>
 
 <!--Bootstrap complementado con JavaScript-->
-<script src="/vendor/jquery/jquery.min.js"></script>
-<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
 <!--Complemento JavaScript-->
-<script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
 
 <!--Scripts personalizados para todas las páginas-->
-<script src="/js/naucratis.min.js"></script>
+<script th:src="@{/js/naucratis.min.js}"></script>
 
 <!--Complementos de nivel de página-->
-<script src="/vendor/datatables/jquery.dataTables.min.js"></script>
-<script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+<script th:src="@{/vendor/datatables/jquery.dataTables.min.js}"></script>
+<script th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
 
 <!--Secuencias de comandos personalizadas a nivel de página-->
-<script src="/js/demo/datatables-demo.js"></script>
-
-
+<script th:src="@{/js/demo/datatables-demo.js}"></script>
 </body>
 </html>
