--- a/src/main/resources/templates/administrator/profile.html
+++ b/src/main/resources/templates/administrator/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    < <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <title>Profile</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -58,7 +58,7 @@
                     </table>
                 </div>
             </div>
-            <h2> <a th:href="@{/administrator/libraries}"> Librerias </a> </h2>
+            <h2> <a th:href="@{/libraries}"> Librerias </a> </h2>
             <!-- Bootstrap core JS-->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
             <!-- Core theme JS-->
